# Design-Patterns_SRM

./: CMakeLists.txt  README.md  githubsite.txt  run.sh
Factory/: CMakeLists.txt  main.cpp
Factory/include/: FactoryManager.h  Product.h
include/: FactoryManager.h  Product.h  Strategy.h
src/: FactoryManager.cpp  Product.cpp  Strategy.cpp  main.cpp
